--- a/dev/desk-menu.scss
+++ b/dev/desk-menu.scss
@@ -35,6 +35,7 @@ nav.desk-toolbar ul li {
 
 nav.desk-toolbar ul ul {
 	display: block;
+	background-color: #FFF;
 }
 
 
@@ -55,7 +56,7 @@ nav.desk-toolbar > ul ul li {
 
 nav.desk-toolbar > ul ul a {
 	display: inline-block;
-	width: 12em;
+	width: auto;
 	padding: 0;
 	cursor: pointer;
 	margin:0;
@@ -79,8 +80,8 @@ nav.desk-toolbar ul ul li .desk-toolbar-shortcut {
 	color: #999;
 	margin:0;
 	text-align: right;
-	width: 3em;
-
+	float: right;
+	position: relative;
 }
 
 
